2011-10-03  Adam Barth  <abarth@webkit.org>

        Results from more bots for http://trac.webkit.org/changeset/96498.

        * platform/chromium-cg-mac-leopard/svg/filters/feColorMatrix-saturate-expected.png: Added.
        * platform/chromium-win-vista/svg/filters: Removed.
        * platform/chromium-win-vista/svg/filters/feColorMatrix-values-expected.png: Removed.

2011-10-03  Chris Fleizach  <cfleizach@apple.com>

        AX: click point for AXHeadings often returns point on empty space (results in wrong context menu)
        https://bugs.webkit.org/show_bug.cgi?id=69262

        Reviewed by John Sullivan.

        * platform/mac/accessibility/heading-clickpoint-expected.txt: Added.
        * platform/mac/accessibility/heading-clickpoint.html: Added.

2011-10-03  Adam Barth  <abarth@webkit.org>

        Unbork the test_expectations file.

        * platform/chromium/test_expectations.txt:

2011-10-03  Adam Barth  <abarth@webkit.org>

        Update expectations for tables tests after http://trac.webkit.org/changeset/96509.

        * platform/chromium-cg-mac/tables/mozilla/bugs/bug113235-2-expected.png: Added.
        * platform/chromium-cg-mac/tables/mozilla/bugs/bug23994-expected.png: Added.
        * platform/chromium-cg-mac/tables/mozilla/bugs/bug56405-expected.png: Added.
        * platform/chromium-cg-mac/tables/mozilla/bugs/bug56563-expected.png:
        * platform/chromium-cg-mac/tables/mozilla_expected_failures/bugs/bug220653-expected.png: Added.
        * platform/chromium-cg-mac/tables/mozilla_expected_failures/bugs/bug3517-expected.txt: Removed.
        * platform/chromium-cg-mac/tables/mozilla_expected_failures/bugs/bug7121-2-expected.png: Added.
        * platform/chromium-mac/tables/mozilla/bugs/bug56563-expected.png:
        * platform/chromium-mac/tables/mozilla_expected_failures/bugs/bug220653-expected.png:
        * platform/chromium-mac/tables/mozilla_expected_failures/bugs/bug3517-expected.png: Added.