@@ -1,3 +1,15 @@
+2011-10-03  Chris Fleizach  <cfleizach@apple.com>
+
+        AX: click point for AXHeadings often returns point on empty space (results in wrong context menu)
+        https://bugs.webkit.org/show_bug.cgi?id=69262
+
+        Actually commit the files this time.
+
+        Reviewed by John Sullivan.
+
+        * platform/mac/accessibility/heading-clickpoint-expected.txt: Added.
+        * platform/mac/accessibility/heading-clickpoint.html: Added.
+
 2011-10-03  Adam Barth  <abarth@webkit.org>
 
         Results from more bots for http://trac.webkit.org/changeset/96498.
